<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="@dimen/common_margin"
        android:layout_marginEnd="@dimen/common_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/CompletedWorksHeaders"
                    android:text="@string/timer_time_of_start" />

                <TextView
                    style="@style/CompletedWorksHeaders"
                    android:text="@string/timer_time_of_finish" />

                <TextView
                    style="@style/CompletedWorksHeaders"
                    android:text="@string/timer_time_in_pause" />

                <TextView
                    style="@style/CompletedWorksHeaders"
                    android:text="@string/timer_elapsed_time" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/timerStartResultView"
                    style="@style/CompletedWorks" />

                <TextView
                    android:id="@+id/timerFinishResultView"
                    style="@style/CompletedWorks" />

                <TextView
                    android:id="@+id/timeInPauseView"
                    style="@style/CompletedWorks" />

                <TextView
                    android:id="@+id/elapsedTimeView"
                    style="@style/CompletedWorks" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="@dimen/layoutTop_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/timerExitFinishFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_ripple"
            android:text="@string/timer_close_common_info"
            android:textSize="@dimen/major_size" />
    </LinearLayout>

</LinearLayout>