<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abstract_mountains">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/user_edit_data_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/common_margin_10dp"
        android:layout_marginTop="@dimen/margin_edit_user_30dp"
        android:layout_marginEnd="@dimen/common_margin_10dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_edit_name"
            style="@style/BaseEditText.User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_edit_name"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_edit_second_name"
            style="@style/BaseEditText.User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/user_edit_second_name"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/BaseTextView.UserEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/user_edit_text_view_user_age" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/user_age_spinner"
            style="@style/BaseSpinner.User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_user_edit_screen_13dp" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/BaseTextView.UserEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/user_edit_text_view_user_gender" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/user_gender_spinner"
            style="@style/BaseSpinner.User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_user_edit_screen_13dp"
            android:entries="@array/gender" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/BaseTextView.UserEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/user_edit_text_view_user_weight" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/user_weight_spinner"
            style="@style/BaseSpinner.User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_user_edit_screen_13dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/user_save_edit_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin_10dp"
        android:src="@drawable/ic_round_done_outline_24"
        app:layout_anchor="@id/user_edit_data_layout"
        app:layout_anchorGravity="bottom|right|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
