<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackGround"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginTop="@dimen/layoutTop_margin"
        android:layout_marginRight="@dimen/common_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/createComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/common_margin"
            android:background="@drawable/orange_buttons"
            android:text="@string/main_create_work"
            android:textColor="@color/appBackGround"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="@dimen/major_size"/>

        <Button
            android:id="@+id/exitComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_blue_btn"
            android:textColor="@color/appBackGround"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/timer_exit_activity"
            android:textSize="@dimen/major_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/common_margin"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginTop="@dimen/layoutTop_margin">

        <EditText
            android:id="@+id/inputComment"
            android:hint="@string/comments_editText_hint"
            android:textColorHint="@color/white_1"
            android:textColor="@color/white_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:inputType="text" />
    </LinearLayout>
</LinearLayout>