<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abstract_mountains">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/user_appBar"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_scrollFlags="exitUntilCollapsed">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/user_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_blue"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/light_blue"
            app:expandedTitleMargin="@dimen/common_margin_10dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/user_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_account_circle_50"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/user_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_baseline_keyboard_backspace_24"
                app:popupTheme="@style/Widget.AppCompat.PopupMenu.Overflow" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/user_nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin_10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/BaseTextView.User"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/BaseTextView.User"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/user_second_name" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/BaseTextView.User"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/user_age" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/BaseTextView.User"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/user_gender" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/BaseTextView.User"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/user_weight" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_name"
                        style="@style/BaseTextView.UserData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_second_name"
                        style="@style/BaseTextView.UserData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_age"
                        style="@style/BaseTextView.UserData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_gender"
                        style="@style/BaseTextView.UserData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_weight"
                        style="@style/BaseTextView.UserData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/user_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_outline_add_a_photo_24"
        app:layout_anchor="@id/user_appBar"
        app:layout_anchorGravity="bottom|right|end" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/user_edit_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin_10dp"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_anchor="@id/user_nested_scroll_view"
        app:layout_anchorGravity="bottom|right|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>